fix spacing bug

--- a/src/sass/homePage.scss
+++ b/src/sass/homePage.scss
@@ -28,6 +28,7 @@
     width: 100%;
     object-fit: cover;
     height: 90vh;
+    margin-top: -100px;
 }
 
 //section 2
